infra/spark/spark-master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-master-ingress
  annotations:
    # Allow access from the bastion host subnet
    # The bastion host is in the subnet with CIDR 10.10.0.0/24
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-master
            port:
              number: 8080
